Fixing overflow issue on comp description

--- a/theme/snapr/css/main.css
+++ b/theme/snapr/css/main.css
@@ -7608,6 +7608,9 @@ body.browser-testing .ui-footer-fixed {
   border: solid 1px #e4e4e4;
   border-radius: 6px;
 }
+.competition .ui-li-desc {
+  white-space: normal;
+}
 /* Android HDPI - Pixel ratio of 1.5. Background-size is 1/1.5 = 66.67% (of a 150px image) */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
   
