--- a/theme/snapr/css/pages-competition.less
+++ b/theme/snapr/css/pages-competition.less
@@ -12,4 +12,7 @@
 			}
 		}
 	}
+	.ui-li-desc {
+		white-space: normal;
+	}
 }
